--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 		</section>
 		<section>
 			<p>
+				<input type="checkbox" name="power" id="power">
+				<label for="power"><span class="on">On</span> <span class="off">Off</span></label>
+			</p>
+			<p>
 			  <button type="submit">Validate the payment</button>
 			</p>
 		</section>
