--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</p>
 		</section>
 		<section>
-			<p>
+			<p class="switch">
 				<ul>
 				  <li>
 					<input type="checkbox" name="power" id="power">
